0.5 2013/01/22
- new plugin SaveResponse
- use Data::Dumper::Sortkeys in tests to make comparing results more reliable
0.4 2013/01/17
- fix test t/05_logformdata.t in case neither YAML nor YAML::Tiny is installed
0.3 2013/01/15
- Example::FlipImg as another sample plugin
0.2 2013/01/15
- move Net::IMP::HTTP_AddXFooHeader to Net::IMP::HTTP::Example::AddXFooHeader
- move App::HTTP_Proxy_IMP::LogFormData to Net::IMP::HTTP::LogFormData
- add tests for both
- make Net::IMP::HTTP::Connection support not only http and stream, but also
  httprq interface
- various fixes to Net::IMP::HTTP::Connection
0.1 2013/01/11
- initial alpha release