@@ -8,7 +8,7 @@ for my $pkg (
     'Net::IMP::Adaptor::STREAM2HTTPConn',
     'Net::IMP::HTTP::Request',
     [ 'Net::IMP::HTTP::LogFormData', 'HTTP::Request' => 0 ],
-    'Net::IMP::HTTP::SaveResponse',
+    [ 'Net::IMP::HTTP::SaveResponse', 'File::Path' => 2.07 ],
     'Net::IMP::HTTP::Example::AddXFooHeader',
     [ 'Net::IMP::HTTP::Example::FlipImg', 'Graphics::Magick' => 0 ],
     #'Net::IMP::Adaptor::STREAM2HTTPReq',
